--- a/conf/application.ini
+++ b/conf/application.ini
@@ -27,7 +27,7 @@ application.display.error                       = 1
 database.master.driver                          = "PDO_MYSQL"
 database.master.database                        = "gitlist"
 database.master.username                        = "root"
-database.master.password                        = ""
+database.master.password                        = "root"
 database.master.hostname                        = "localhost"
 database.master.port                            = 3306
 database.master.charset                         = "UTF8"
